@@ -2,46 +2,34 @@ package com.digitalgoldwallet.digital_gold_wallet.service.impl;
 
 import com.digitalgoldwallet.digital_gold_wallet.dto.request.TransactionHistoryRequestDto;
 import com.digitalgoldwallet.digital_gold_wallet.dto.response.TransactionHistoryResponseDto;
-
 import com.digitalgoldwallet.digital_gold_wallet.entity.TransactionHistory;
 import com.digitalgoldwallet.digital_gold_wallet.entity.User;
 import com.digitalgoldwallet.digital_gold_wallet.entity.VendorBranch;
-
-import com.digitalgoldwallet.digital_gold_wallet.exception.TransactionHistoryNotFoundException;
 import com.digitalgoldwallet.digital_gold_wallet.exception.UserNotFoundException;
 import com.digitalgoldwallet.digital_gold_wallet.exception.VendorBranchNotFoundException;
-
 import com.digitalgoldwallet.digital_gold_wallet.mapper.TransactionHistoryMapper;
-
 import com.digitalgoldwallet.digital_gold_wallet.repository.TransactionHistoryRepository;
 import com.digitalgoldwallet.digital_gold_wallet.repository.UserRepository;
 import com.digitalgoldwallet.digital_gold_wallet.repository.VendorBranchRepository;
-
 import com.digitalgoldwallet.digital_gold_wallet.service.TransactionHistoryService;
 
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class TransactionHistoryServiceImpl
         implements TransactionHistoryService {
 
-    private final
-    TransactionHistoryRepository
-            repository;
+    private final TransactionHistoryRepository repository;
 
-    private final
-    UserRepository
-            userRepository;
+    private final UserRepository userRepository;
 
-    private final
-    VendorBranchRepository
-            branchRepository;
+    private final VendorBranchRepository branchRepository;
 
-    private final
-    TransactionHistoryMapper
-            mapper;
+    private final TransactionHistoryMapper mapper;
+
 
     public TransactionHistoryServiceImpl(
 
@@ -52,46 +40,39 @@ public class TransactionHistoryServiceImpl
             VendorBranchRepository branchRepository,
 
             TransactionHistoryMapper mapper
-
-    ){
+    ) {
 
         this.repository=repository;
-
         this.userRepository=userRepository;
-
         this.branchRepository=branchRepository;
-
         this.mapper=mapper;
 
     }
+
 
     @Override
     public TransactionHistoryResponseDto
     createTransaction(
             TransactionHistoryRequestDto dto
-    ){
+    ) {
 
         User user=
                 userRepository.findById(
-                                dto.getUserId()
+                        dto.getUserId()
+                ).orElseThrow(
+                        ()->new UserNotFoundException(
+                                "User not found"
                         )
-                        .orElseThrow(
-                                ()->
-                                        new UserNotFoundException(
-                                                "User not found"
-                                        )
-                        );
+                );
 
         VendorBranch branch=
                 branchRepository.findById(
-                                dto.getBranchId()
+                        dto.getBranchId()
+                ).orElseThrow(
+                        ()->new VendorBranchNotFoundException(
+                                "Branch not found"
                         )
-                        .orElseThrow(
-                                ()->
-                                        new VendorBranchNotFoundException(
-                                                "Branch not found"
-                                        )
-                        );
+                );
 
         TransactionHistory transaction=
                 mapper.toEntity(
@@ -100,33 +81,10 @@ public class TransactionHistoryServiceImpl
                         branch
                 );
 
-        TransactionHistory saved=
+        transaction=
                 repository.save(
                         transaction
                 );
-
-        return mapper.toResponseDto(
-                saved
-        );
-
-    }
-
-    @Override
-    public TransactionHistoryResponseDto
-    getTransactionById(
-            Integer transactionId
-    ){
-
-        TransactionHistory transaction=
-                repository.findById(
-                                transactionId
-                        )
-                        .orElseThrow(
-                                ()->
-                                        new TransactionHistoryNotFoundException(
-                                                "Transaction not found"
-                                        )
-                        );
 
         return mapper.toResponseDto(
                 transaction
@@ -134,22 +92,42 @@ public class TransactionHistoryServiceImpl
 
     }
 
+
     @Override
     public List<TransactionHistoryResponseDto>
     getTransactionsByUser(
             Integer userId
-    ){
+    ) {
 
         return repository
-                .findByUserUserId(
-                        userId
-                )
+                .findByUserUserId(userId)
                 .stream()
                 .map(
-                        mapper::
-                                toResponseDto
+                        mapper::toResponseDto
                 )
-                .toList();
+                .collect(
+                        Collectors.toList()
+                );
+
+    }
+
+
+    @Override
+    public List<TransactionHistoryResponseDto>
+    getTransactionsByBranch(
+            Integer branchId
+    ) {
+
+        return repository
+                .findByBranchBranchId(branchId)
+                .stream()
+                .map(
+                        mapper::toResponseDto
+                )
+                .collect(
+                        Collectors.toList()
+                );
+
     }
 
 }
